feat: 주문 기능 수정, EDR 수정 및 전체 리팩토링